# syn-rsx

./: CHANGELOG.md  CHANGELOG.old  CHANGELOG.old.md  Cargo.toml  LICENSE  README.md  cliff.toml  comparsion-with-syn-rsx.md  generate_changelog.sh  rustfmt.toml
.githooks/: pre-push
.github/workflows/: bench.yml  build.yml  ci.yml
benches/: bench.rs
examples/html-to-string-macro/: Cargo.toml  README.md
examples/html-to-string-macro/src/: lib.rs
examples/html-to-string-macro/tests/: lib.rs  tests.rs
examples/html-to-string-macro/tests/ui/: doctype.rs  doctype.stderr  first.stderr  multiple_errors.rs  multiple_errors.stderr  no_open_tag.rs  no_open_tag.stderr  node_block_with_dot.rs  node_block_with_dot.stderr  not_closed_tag.rs  not_closed_tag.stderr
src/: config.rs  context.rs  error.rs  lib.rs  node.rs  parser.rs
src/node/: atoms.rs  attribute.rs  mod.rs  node_name.rs  node_value.rs  parse.rs  raw_text.rs  tokens.rs
src/parser/: mod.rs  recoverable.rs
tests/: lib.rs  recoverable_parser.rs  test.rs
