[package]
name = "syn-rsx"
description = "syn-powered parser for JSX-like TokenStreams"
version = "0.9.0"
authors = ["stoically <stoically@protonmail.com>"]
keywords = ["syn", "jsx", "rsx", "html", "macro"]
edition = "2018"
repository = "https://github.com/stoically/syn-rsx"
readme = "README.md"
license = "MIT"

[features]
# default = ["unquoted-text"]
# unquoted-text = ["proc-macro2/span-locations"]

[lib]
bench = false

[dependencies]
proc-macro2 = { version = "1.0.47", features = ["span-locations"] }
quote = "1.0.21"
syn = { version = "1.0.105", features = ["full", "parsing", "extra-traits"] }
thiserror = "1.0.37"

[dev-dependencies]
criterion = "0.4.0"
eyre = "0.6.8"

[[bench]]
name = "bench"
harness = false

[workspace]
members = [
    "examples/html-to-string-macro"
]
