[package]
name = "syn-rsx"
description = "syn-powered parser for JSX-like TokenStreams"
version = "0.9.0"
authors = ["stoically <stoically@protonmail.com>"]
keywords = ["syn", "jsx", "rsx", "html", "macro"]
edition = "2018"
repository = "https://github.com/stoically/syn-rsx"
readme = "README.md"
license = "MIT"

[lib]
bench = false

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
thiserror = "1.0"

[dev-dependencies]
criterion = "0.4"
eyre = "0.6"

[[bench]]
name = "bench"
harness = false

[workspace]
members = [
    "examples/html-to-string-macro"
]
