[package]
name = "html-to-string-macro"
description = "simple html to string macro powered by syn-rsx"
version = "0.2.5"
authors = ["stoically <stoically@protonmail.com>"]
keywords = ["html-to-string", "html", "macro"]
edition = "2021"
repository = "https://github.com/stoically/syn-rsx/tree/main/examples/html-to-string-macro"
readme = "README.md"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.47"
quote = "1.0.21"
syn = "1.0.102"
syn-rsx = { path = "../../" }
